--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "react-chartjs-2": "5.2.0",
     "react-dom": "18.2.0",
     "react-github-btn": "1.4.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "6.11.0",
     "react-scripts": "^5.0.1",
     "react-table": "7.8.0",
     "react-toastify": "^10.0.5",
+    "redux": "^5.0.1",
     "stylis": "4.1.4",
     "stylis-plugin-rtl": "2.1.1",
     "xlsx": "^0.18.5",
