--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.7.1",
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
+    "date-fns": "^3.6.0",
     "prop-types": "15.8.1",
     "react": "^18.3.1",
     "react-chartjs-2": "5.2.0",
@@ -33,6 +34,7 @@
     "react-table": "7.8.0",
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "stylis": "4.1.4",
     "stylis-plugin-rtl": "2.1.1",
     "xlsx": "^0.18.5",
