--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "react-table": "7.8.0",
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
+    "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
+    "redux-thunk": "^3.1.0",
     "stylis": "4.1.4",
     "stylis-plugin-rtl": "2.1.1",
     "xlsx": "^0.18.5",
