--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "prop-types": "15.8.1",
     "react": "^18.3.1",
     "react-chartjs-2": "5.2.0",
