--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 # BASE_URL="http://pooldashboardbe-env.eba-fp4qmpg3.us-east-1.elasticbeanstalk.com/"
 REACT_APP_BASE_URL=http://localhost:8000
+S3_BUCKET_NAME=pool-user
+REACT_APP_RAZORPAY_KEY_ID=rzp_test_bTAOqF3QhHNiwY
+REACT_APP_RAZORPAY_KEY_SECRET=iPZiIvTbp6xi3atwNv7Ag4cc
