--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "axios": "^1.7.2",
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
+    "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "prop-types": "15.8.1",
+    "razorpay": "^2.9.4",
     "react": "^18.3.1",
     "react-chartjs-2": "5.2.0",
     "react-dom": "18.2.0",
